--- a/article.html
+++ b/article.html
@@ -81,7 +81,7 @@
           полностью.
         </p>
         <figure class="style-img">
-          <img src="../4/img/1.jpg" alt="screen" />
+          <img src="img/1.jpg" alt="screen" />
           <figcaption class="figcaption">
             На скриншоте видно, как правильно задавать отступы, — только справа
             и снизу (показано оранжевым)
@@ -94,7 +94,7 @@
           родителя элементов.
         </p>
 
-        <img class="style-40" src="../4/img/2.jpg" alt="screen 2" />
+        <img class="style-40" src="img/2.jpg" alt="screen 2" />
         <p class="text">
           Получается, что блок не может сдвигаться благодаря своим отступам, —
           он делает это только за счёт соседних элементов (и сам двигает
@@ -110,14 +110,14 @@
           Если у блока нет соседа с левой стороны — задавать ему отступ слева
           нельзя. То же самое касается любой из сторон.
         </p>
-        <img class="style-40" src="../4/img/3.jpg" alt="screen 3" />
+        <img class="style-40" src="img/3.jpg" alt="screen 3" />
         <p class="text">
           У обоих задан отступ снизу. Для первого списка это применимо, потому
           что есть сосед снизу — второй список. А для второго, не имеющего
           такого соседа, — отступа нет.
         </p>
         <figure class="style-img">
-          <img src="../4/img/4.jpg" alt="screen 4" />
+          <img src="img/4.jpg" alt="screen 4" />
           <figcaption class="figcaption">
             На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает
             размер «родителя» с голубым фоном, образуя лишний отступ — типичную
@@ -142,13 +142,13 @@
           показано в примере. Теперь всё работает как надо.
         </p>
 
-        <img class="style-40" src="../4/img/5.jpg" alt="screen 5" />
+        <img class="style-40" src="img/5.jpg" alt="screen 5" />
         <p class="text">
           Чтобы не создавать два селектора, можно написать короче, используя
           псевдокласс<b>:not</b> . Тут мы буквально говорим следующее: «Задай
           отступ всем ul, но не последнему».
         </p>
-        <img class="style-40" src="../4/img/6.jpg" alt="screen 6" />
+        <img class="style-40" src="img/6.jpg" alt="screen 6" />
       </div>
       <h3 class="head-3">Типичный пример: отступы в карточке</h3>
       <p class="text">
@@ -162,7 +162,7 @@
         рассказал.
       </p>
 
-      <img class="style-40" src="../4/img/7.jpg" alt="screen 7" />
+      <img class="style-40" src="img/7.jpg" alt="screen 7" />
       <p class="text">
         Нам достаточно обернуть весь текст карточки в блок и задать блоку
         внутренний отступ — padding. Так наша вёрстка будет соответствовать
