--- a/modules.html
+++ b/modules.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="Vector"><img src="img/Vector.svg" alt="Skillbox"></div>
       <div>
-        <a href="#">На главную</a>
+        <a class="link" href="./index.html">На главную</a>
       </div>
 
       <h1 class="head-1">Модули курса Веб-верстка</h1>
@@ -24,6 +25,7 @@
             <li class="text">Редактор кода, Codepen</li>
             <li class="text">Работа с DevTools</li>
           </ul>
+          <div class="number">01</div>
         </div>
         <div class="box image-2">
           <h2 class="head-2">Базовый HTML</h2>
@@ -34,6 +36,7 @@
             <li class="text">Служебные теги</li>
             <li class="text">Кодстайл HTML</li>
           </ul>
+          <div class="number">02</div>
         </div>
         <div class="box image-3">
           <h2 class="head-2">Базовый CSS</h2>
@@ -44,6 +47,7 @@
             <li class="text">Блочная модель и позиционирование</li>
             <li class="text">Кодстайл CSS</li>
           </ul>
+          <div class="number">03</div>
         </div>
         <div class="box image-4">
           <h2 class="head-2">Работа с макетом</h2>
@@ -52,8 +56,10 @@
             <li class="text">Работа с макетом в Photoshop</li>
             <li class="text">Работа с макетом в Figma</li>
           </ul>
+          <div class="number">04</div>
         </div>
       </div>
+      <button class="button">Показать ещё</button>
     </div>
   </body>
 </html>
